# DSToolkitNL2SQL

./: .env_template  .gitignore  README.md  pyproject.toml
NL2SQL/: GETTING_STARTED.md  README.md  pyproject.toml
NL2SQL/src/nl2sql/: .env.example  __init__.py  nl2sql_run.py
NL2SQL/src/nl2sql/autogen_nl2sql/: Agentic Vector Based NL2SQL.ipynb  README.md  __init__.py  autogen_text_2_sql.py  inner_autogen_text_2_sql.py
NL2SQL/src/nl2sql/autogen_nl2sql/creators/: llm_agent_creator.py  llm_model_creator.py
NL2SQL/src/nl2sql/autogen_nl2sql/custom_agents/: parallel_query_solving_agent.py  sql_query_cache_agent.py  sql_schema_selection_agent.py
NL2SQL/src/nl2sql/data_dictionary/: README.md
NL2SQL/src/nl2sql/nl2sql_core/: README.md
NL2SQL/src/nl2sql/nl2sql_core/connectors/: ai_search.py  databricks_sql.py  factory.py  open_ai.py  postgres_sql.py  snowflake_sql.py  sql.py  sqlite_sql.py  tsql_sql.py
NL2SQL/src/nl2sql/nl2sql_core/custom_agents/: sql_query_cache_agent.py  sql_schema_selection_agent.py
NL2SQL/src/nl2sql/nl2sql_core/data_dictionary/: cli.py  data_dictionary_creator.py  databricks_data_dictionary_creator.py  postgres_data_dictionary_creator.py  tsql_data_dictionary_creator.py
NL2SQL/src/nl2sql/nl2sql_core/structured_outputs/: __init__.py
NL2SQLWEB/: function_app.py  requirements.txt  response.json
deploy_ai_search_indexes/: .env.example  README.md  pyproject.toml
deploy_ai_search_indexes/src/deploy_ai_search_indexes/: ai_search.py  deploy.py  environment.py  text_2_sql_column_value_store.py  text_2_sql_schema_store.py
docs/: GETTING_STARTED.md
